elasticsearch/ingress-elasticsearch.yml
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: elasticsearch-ingress
    namespace: elastic-system
  spec:
    ingressClassName: nginx
    rules:
      - host: aa5d597798b7442f387892d527f2564b-f9b6bc5e17f178fc.elb.eu-west-1.amazonaws.com
        http:
          paths:
            - pathType: Prefix
              backend:
                service:
                  name: elastic-webhook-server
                  port:
                    number: 9200
              path: /elasticsearch
